fixing screen behind pop-up and playing with coloured blocks

--- a/style.css
+++ b/style.css
@@ -7,7 +7,15 @@ body{
     background-color:#fff
 }
 h1{
-    text-align:center
+    text-align:center;
+    font-weight:900
+}
+h2{
+    font-weight:700;
+    color:#b88615
+}
+.text-block{
+    background-color:  #b4fce552;
 }
 @media only screen and (max-width:820px){
     h1{
@@ -33,12 +41,12 @@ h1{
     width:100%;
     height:100%;
     background-color:#333;
-    opacity:.8;
-    display:none
+    opacity:0.9;
+    z-index:1;
 }
 #popup-box{
     position:fixed;
-    z-index:1;
+    z-index:2;
     left:50%;
     top:50%;
     transform:translate(-50%,-50%);
@@ -283,6 +291,9 @@ input[type=text],select{
     display:flex;
     justify-content:center
 }
+#bass-icCarousel{
+    z-index: 0;
+}
 #slideshowButton{
     background-color:#19191e;
     color:#5dfdcb;
@@ -406,7 +417,7 @@ input[type=submit]:hover{
 }
 
 /*
-Css for video on gig page Daniel Morrissey 21118701
+CSS for video on gig page (Daniel Morrissey)
 */
 
 #video{
